force-app/main/default/objects/copado__Selenium_Test_Case__c/fields/copado__Previous_Version__c.field-meta.xml
<CustomField>
    <fullName>copado__Previous_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Version</label>
    <referenceTo>copado__Selenium_Test_Case__c</referenceTo>
    <relationshipLabel>Next Version</relationshipLabel>
    <relationshipName>Selenium_Test_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>