force-app/main/default/objects/copado__Selenium_Test_Case__c/fields/copado__Version__c.field-meta.xml
<CustomField>
    <fullName>copado__Version__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>Version</label>
    <length>6</length>
    <type>Text</type>
</CustomField>